--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
 body{
     color: #E5E5E5;
 }
+
+header{
+
+   
+    width: 100%;
+    height: 70%;
+    background-color: #232a31;
+    padding: 10px 32px;
+}
