--- a/css/noticia.css
+++ b/css/noticia.css
@@ -1,3 +1,123 @@
-body{
-    color: #E5E5E5;
+body {
+   background-color: #E5E5E5;
+}
+
+.container {
+
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.main {
+
+    height: 100%;
+    width: 100%;
+    max-width: 700px;
+
+
+}
+
+.segunda-parte {
+    width: 100%;
+
+}
+
+.texto {
+    margin-top: 5%;
+    width: 100%;
+    color: rgb(0, 0, 0);
+
+
+
+}
+
+.imagem {
+
+    margin-top: 5%;
+    margin-left: 15%;
+    width: 70%;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.comentario {
+
+    color: rgb(0, 0, 0);
+
+
+}
+
+.imagem-rodape img {
+    margin-top: 5%;
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: small;
+
+}
+
+nav {
+
+    color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: small;
+    background-color: rgb(231, 230, 228);
+    height: 100%;
+    width: 100%;
+    max-width: 250px;
+    margin-top: 5%;
+}
+
+.caixinha {
+
+    width: 100%;
+    display: flex;
+    height: 404px;
+    max-width: 1363px;
+    flex-direction: column;
+}
+
+.card {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 250px;
+    background-color: #fff;
+
+}
+.cards {
+
+    display: flex;
+    width: 100%;
+}
+.card1-img {
+
+    background-image: url(../assets/img/g2_3.png);
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+.card main h3 {
+
+    font-size: 16px;
+}
+.card-header {
+
+    width: 100%;
+    height: 150px;
 }
