--- a/css/styles.css
+++ b/css/styles.css
@@ -21,9 +21,9 @@ body{
 
 .news-nav{
     width: 100%;
-    max-width: 916px;
     height: 54px;
     padding: 12px;
+    border-radius: 8px;
     background-color: #ffffffd5;
 }
 
@@ -37,10 +37,100 @@ body{
 .news-section-links{
     padding: 0 56px;
     font-size: 18px;
-    color: black;
+    color: #2A2A2A;
 }
 
 .fa-newspaper{
     font-size: 30px;
-    margin-right: 18px;
+    margin-right: 30px;
+    color: #000000;
+}
+
+.cards{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 18px;
+    margin-top: 12px;
+    justify-items: center;
+    align-items: center;
+}
+
+.notice-card{
+    width: 438px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 8px;
+    background-color: #FFF;
+    gap: 18px;
+}
+
+.header-card{
+    width: 100%;
+    height: 250px;
+}
+
+.notice-img{
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    object-fit: cover;
+}
+
+.main-card{
+    width: 100%;
+    max-width: 388px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.notice-title{
+    font-size: 18px;
+    font-family: Poppins-SemiBold;
+    color: #2A2A2A;
+}
+
+.notice-description{
+    font-size: 15;
+    font-family: Poppins-Regular;
+    color: #2A2A2A;
+}
+
+.notice-details{
+    display: flex;
+    gap: 30px;
+}
+
+.notice-details span{
+    font-size: 13px;
+    font-family: Poppins-Regular;
+}
+
+.notice-hour{
+    color: #000000;
+}
+
+.notice-author{
+    color: #807c7c;
+}
+
+.footer-card{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
+    gap: 18px;
+    border-top: 1px solid #e7e4e4;
+}
+
+.footer-card i{
+    font-size: 20px;
+    color: #000000;
 }
