--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,171 @@
 body{
-    color: #E5E5E5;
+    z-index: 2;
+    background-color: #E5E5E5;
+    height: 100%;
 }
 
 header{
-
    
     width: 100%;
-    height: 70%;
-    background-color: #232a31;
-    padding: 10px 32px;
+    height: 100px;
+    background-color: #ffffff;
+    padding: 5px 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+   
 }
-footer{
-    background-color: red;
+header nav{
     width: 100%;
-    height: 300px;
+}
+
+.logo{
+    width: 100px;
+}
+
+#ul-header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.li-header{
+    display: flex;
+    gap: 155px;
+  
+}
+
+.a-header {
+    color: rgb(82, 81, 81);
+    font-family:Poppins-Light ;
+    border-radius: 10px;
+    border: 2px solid rgb(168, 170, 171);
+    padding: 10px;
+    
+   
+   
+    
+    
+}
+
+.a-header:hover {
+    color: rgb(184, 11, 28);
+    transition: 0.3s all;
+}
+
+.fa-user{
+    font-size: 30px;
+    color: rgb(168, 170, 171);
+   padding: 40px;
+}
+
+.fa-search{
+    font-size: 30px;
+    color:rgb(168, 170, 171);
+    padding: 40px;
+}
+
+.fa-bars{
+    font-size: 30px;
+        color: rgb(168, 170, 171);
+        padding: 40px;
+}
+
+
+footer {
+
+    width: 100%;
+    height: 200px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: #0E1E32;
+    padding: 5px 5px;
+    padding-bottom: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+
+}
+
+footer nav {
+    width: 100%;
+}
+
+.logo-footer {
+    width: 100px;
+    height: 100px;
+    margin-top: 170px;
+    
+   
+   
+}
+
+#ul-footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+  
+}
+
+.li-footer {
+    display: flex;
+    gap: 155px;
+
+}
+
+.a-footer {
+    
+    color: rgb(255, 255, 255);
+    font-family: Poppins-Light;
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 170px;
+
+
+}
+
+.footer-texts {
+    margin-left: 30px;
+    margin-top: 170px;
+    font-size: 18px;
+  
+}
+
+.footer-texts h4{
+    color: #E5E5E5;
+    font-size: 16px;
+}
+
+.footer-texts p{
+    color: #d1c6c6;
+}
+
+.fa-wifi{
+font-size: 25px;
+    color: rgb(168, 170, 171);
+    padding: 50px;
+    margin-top: 170px;
+}
+
+.fa-twitter{
+font-size: 25px;
+    color: rgb(168, 170, 171);
+    padding: 50px;
+}
+
+.fa-reddit-alien{
+font-size: 25px;
+    color: rgb(168, 170, 171);
+    padding: 50px;
+}
+
+.fa-facebook-square{
+font-size: 25px;
+    color: rgb(168, 170, 171);
+    padding: 50px;
+
 }
