--- a/css/reset.css
+++ b/css/reset.css
@@ -17,6 +17,8 @@
 
     p {
         color: #70747a;
+       ;
+
     }
 
     button,
@@ -34,6 +36,8 @@
     a {
         text-decoration: none;
         margin: 0;
+    
+        
     }
 
     ul {
@@ -50,3 +54,9 @@
         padding: 0;
         margin: 0;
     }
+
+   
+    
+
+    
+    
