--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@ i, img{
     cursor: pointer;
 }
 
-.white-box h1 {
+.breaking-news-text {
     color: red;
     font-size: 15px;
     font-family:Poppins-SemiBold ;
@@ -97,7 +97,7 @@ i, img{
     align-items: center;
 }
 
-.red-text p {
+.breaking-news-title {
     font-size: 15px;
     color: #ffffff;
     font-family:Poppins-Regular ;
@@ -220,12 +220,12 @@ i, img{
 
 .main-card {
     width: 100%;
-    max-width: 388px;
+    max-width: 400px;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 20px;
+    gap: 10px;
 }
 
 .notice-title {
@@ -244,7 +244,7 @@ i, img{
 
 .notice-details {
     display: flex;
-    gap: 30px;
+    gap: 15px;
 }
 
 .notice-details span {
