--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,8 @@ body {
     background-color: #E5E5E5;
 }
 
-i, img{
+i,
+img {
     cursor: pointer;
 }
 
@@ -39,7 +40,7 @@ i, img{
     width: 100%;
 }
 
-.li-header{
+.li-header {
     display: flex;
     gap: 50px;
 }
@@ -61,13 +62,14 @@ i, img{
     margin-top: 122px;
 }
 
-.trending-title{
-    font-family:Poppins-Bold ;
+.trending-title {
+    font-family: Poppins-Bold;
     font-size: 20px;
 }
+
 .trending-description {
     margin-top: 10px;
-    font-family:Poppins-Regular ;
+    font-family: Poppins-Regular;
 }
 
 .white-box {
@@ -80,7 +82,7 @@ i, img{
 .breaking-news-text {
     color: red;
     font-size: 15px;
-    font-family:Poppins-SemiBold ;
+    font-family: Poppins-SemiBold;
 }
 
 .red-box {
@@ -100,7 +102,7 @@ i, img{
 .breaking-news-title {
     font-size: 15px;
     color: #ffffff;
-    font-family:Poppins-Regular ;
+    font-family: Poppins-Regular;
 }
 
 .fav {
@@ -111,6 +113,7 @@ i, img{
 
 .fav-span {
     color: red;
+    font-family: Poppins-SemiBold;
 }
 
 .fav-item {
@@ -121,24 +124,33 @@ i, img{
 .fa-heart {
     color: rgb(0, 0, 0);
     font-size: 16px;
-    
+
 }
 
 .fas {
     color: red;
-   
+
 }
 
 .fa-bookmark {
     color: black;
-   
+
 }
 
 .trending-foot {
     display: flex;
     flex-direction: row;
     gap: 30px;
-    color: black;
+    color: rgb(57, 57, 57);
+
+}
+
+.trending-date {
+    font-family: Poppins-SemiBold;
+}
+
+.trending-author {
+    font-family: Poppins-SemiBold;
 }
 
 .main {
@@ -164,16 +176,15 @@ i, img{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
 }
 
-.nav-items a{
-    font-family:Poppins-SemiBold ;
+.nav-items a {
+    font-family: Poppins-SemiBold;
 }
 
 
 .news-section-links {
-    padding: 0 56px;
+    padding: 0 36px;
     font-size: 18px;
     color: #2A2A2A;
 }
@@ -194,6 +205,8 @@ i, img{
     align-items: center;
 }
 
+
+
 .notice-card {
     width: 438px;
     display: flex;
@@ -203,6 +216,11 @@ i, img{
     border-radius: 8px;
     background-color: #FFF;
     gap: 18px;
+    cursor: pointer;
+}
+
+.notice-card:hover {
+    transform: scale(1.05);
 }
 
 .header-card {
@@ -229,14 +247,14 @@ i, img{
 }
 
 .notice-title {
-    font-size: 20px;
+    font-size: 22px;
     font-family: Poppins-SemiBold;
     color: #2A2A2A;
     height: 120px;
 }
 
 .notice-description {
-    font-size: 15;
+    font-size: 15px;
     font-family: Poppins-Light;
     color: #2A2A2A;
     height: 75px;
@@ -260,9 +278,10 @@ i, img{
     color: #807c7c;
 }
 
-.show-more{
+.show-more {
     font-size: 14px;
-    font-family: Poppins-Medium;
+    font-family: Poppins-SemiBold;
+    max-width: 133px;
     color: rgb(0, 183, 255);
     cursor: pointer;
 }
@@ -284,27 +303,31 @@ i, img{
 
 .logo {
     width: 150px;
+    margin-right: 40px;
+
 }
 
 #ul-header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     width: 100%;
+
 }
+
 
 .a-header {
     color: rgb(82, 81, 81);
     font-family: Poppins-Light;
-    border-radius: 10px;
-    border: 2px solid rgb(168, 170, 171);
     padding: 10px;
+
+
 }
 
 .a-header:hover {
-    color: rgb(184, 11, 28);
+    color: rgb(255, 15, 39);
     transition: 0.3s all;
-    background-color: #7d7b7b;
+
 }
 
 .fa-user {
@@ -347,7 +370,7 @@ i, img{
     width: 100%;
 }
 
-.li-a{
+.li-a {
     display: flex;
     gap: 40px;
 }
@@ -357,7 +380,7 @@ i, img{
     font-family: Poppins-Light;
 }
 
-.li-icons{
+.li-icons {
     display: flex;
     gap: 40px;
 }
@@ -372,7 +395,7 @@ i, img{
     font-family: Poppins-light;
 }
 
-.footer-texts span{
+.footer-texts span {
     color: #FFF;
     font-family: Poppins-Medium;
 }
@@ -380,27 +403,27 @@ i, img{
 .fa-wifi {
     font-size: 25px;
     color: rgb(168, 170, 171);
-   
+
 }
 
 .fa-twitter {
     font-size: 25px;
     color: rgb(168, 170, 171);
-    
+
 }
 
 .fa-reddit-alien {
     font-size: 25px;
     color: rgb(168, 170, 171);
-  
+
 }
 
 .fa-facebook-square {
     font-size: 25px;
     color: rgb(168, 170, 171);
-   
+
 }
 
-.img-trending{
+.img-trending {
     object-fit: cover;
 }
