--- a/css/reset.css
+++ b/css/reset.css
@@ -1,66 +1,61 @@
-*{
-       
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: "Montserrat", Arial, Helvetica, sans-serif;
-    }
+* {
 
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-        color: #333;
-    }
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Montserrat", Arial, Helvetica, sans-serif;
+}
 
-    p {
-        color: #70747a;
-       ;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: #333;
+}
 
-    }
+p {
+    color: #70747a;
+    ;
 
-    button,
-    input,
-    textarea,
-    a {
-        border: 0;
-        outline: none;
-    }
+}
 
-    textarea {
-        resize: none;
-    }
+button,
+input,
+textarea,
+a {
+    border: 0;
+    outline: none;
+}
 
-    a {
-        text-decoration: none;
-        margin: 0;
-    
-        
-    }
+textarea {
+    resize: none;
+}
 
-    ul {
-        list-style: none;
-    }
+a {
+    text-decoration: none;
+    margin: 0;
 
-    fieldset {
-        border: none;
-        margin: 0;
-        padding: 0;
-    }
 
-    legend {
-        padding: 0;
-        margin: 0;
-    }
+}
 
-    i{
-        cursor: pointer;
-    }
+ul {
+    list-style: none;
+}
 
-   
-    
+fieldset {
+    border: none;
+    margin: 0;
+    padding: 0;
+}
 
-    
-    
+legend {
+    padding: 0;
+    margin: 0;
+}
+
+i,
+img {
+    cursor: pointer;
+}
