--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,6 @@ body {
     background-color: #E5E5E5;
 }
 
-i,
-img {
-    cursor: pointer;
-}
-
 .container {
     display: flex;
     justify-content: center;
@@ -182,11 +177,19 @@ img {
     font-family: Poppins-SemiBold;
 }
 
-
 .news-section-links {
     padding: 0 36px;
     font-size: 18px;
     color: #2A2A2A;
+    transition: 1s;
+}
+
+.news-section-links:hover{
+    color: rgb(255, 15, 39);
+}
+
+.news-section-links:focus {
+    color: rgb(255, 15, 39);
 }
 
 .fa-newspaper {
@@ -200,12 +203,10 @@ img {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 18px;
-    margin-top: 12px;
+    margin-top: 16px;
     justify-items: center;
     align-items: center;
 }
-
-
 
 .notice-card {
     width: 438px;
@@ -217,6 +218,7 @@ img {
     background-color: #FFF;
     gap: 18px;
     cursor: pointer;
+    transition: 0.7s;
 }
 
 .notice-card:hover {
@@ -320,14 +322,16 @@ img {
     color: rgb(82, 81, 81);
     font-family: Poppins-Light;
     padding: 10px;
-
-
+    transition: 1s;
 }
 
 .a-header:hover {
     color: rgb(255, 15, 39);
-    transition: 0.3s all;
+}
 
+.a-header:focus{
+    transform: scale(1.15);
+    color: rgb(255, 15, 39);
 }
 
 .fa-user {
